# miseq_tools

./: README.md  pyproject.toml
miseq_tools/: __main__.py  demux_stats.py  main.py  pooling.py  quant_combine.py  quant_kapa.py  quant_qubit.py  samplesheet.py  utils.py
miseq_tools/known_barcodes/i5/: Nextera.tsv  Truseq.tsv
miseq_tools/known_barcodes/i7/: Nextera.tsv  P7_skXPRa.tsv  Truseq.tsv
test/: test_kapa.py  test_pooling.py  test_samplesheet.py
